--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,15 @@
 # Document Processing Dependencies
-anthropic==0.7.8
+anthropic==0.67.0
 python-docx==0.8.11
 python-dotenv==1.0.0
 
-# Optional: PDF processing 
-PyPDF2==3.0.1
+#backend
+fastapi==0.104.1           
+uvicorn[standard]==0.24.0  
+httpx==0.28.1             
+python-multipart==0.0.12  
+pydantic==2.9.2
+requests==2.31.0        
 
 # Data handling
 json5==0.9.14
