--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@
 anthropic==0.67.0
 python-docx==0.8.11
 python-dotenv==1.0.0
+weasyprint==61.2
+markdown==3.5.1 
 
 #backend
 fastapi==0.104.1           
